# infinite_ape

./: .env.example  .gitignore  README.md  enrich_transform_result.json  requirements.txt
Causal Agent/: .env.example  LICENSE  README.md  causal.py  causal_agent.py  counterfactual_models.py  preprocessing_config.yaml  run_app.bat  synthetic_dataset.py
causalagent/: README.md  app.py  counterfactual_models.py  definitions.py  form_filling.json  preprocessing_config_synthetic.yaml  requirements.txt  run_streamlit.py  synthetic_dataset.csv
tarpit_alignment/instruction_sdk_compiler/: README.md  __init__.py  compiler.py  compiler_client.py  pyproject.toml
tarpit_alignment/instruction_sdk_compiler/codegen/: __init__.py  renderer.py  sanitize.py
tarpit_alignment/instruction_sdk_compiler/examples/: __init__.py  demo_end_to_end.py  demo_use_generated_sdk.py
tarpit_alignment/instruction_sdk_compiler/llm/: __init__.py  base.py  openai_client.py  prompts.py
tarpit_alignment/instruction_sdk_compiler/parser/: __init__.py  ir.py  validate.py
tarpit_alignment/instruction_sdk_compiler/patching/: __init__.py  apply.py  rules.py
tarpit_alignment/instruction_sdk_compiler/runtime_sdk/: __init__.py  base.py  registry.py
tarpit_alignment/instruction_sdk_compiler/spec/: __init__.py  model.py
tarpit_alignment/instruction_sdk_compiler/storage/: __init__.py  persistence.py
tarpit_alignment/instruction_sdk_compiler/tests/: __init__.py  test_codegen_import.py  test_generated_client_calls.py  test_llm_to_changeset.py  test_patching_in_place.py  test_repair_loop.py
(+252 files in other folders)
